<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffdf"
    android:gravity="top|fill_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical">
        
	    <Button
	        android:id="@+id/btnPausarTest"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/str_btn_pausar_test"
	        android:visibility="visible" 
	        android:enabled="false"/>
	    <Button
	        android:id="@+id/btnReanudarTest"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/str_btn_reanudar_test"
	        android:visibility="gone"
	        android:enabled="false" />
		<Button
	        android:id="@+id/btnFinalizarTest"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/str_btn_finalizar_test"
	        android:visibility="visible" 
	        android:enabled="false"/>
		<Button
	        android:id="@+id/btnCerrarTest"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/str_btn_cerrar_test"
	        android:visibility="gone" 
	        android:enabled="false"/>
			    
    </LinearLayout>

    <ProgressBar
        android:id="@+id/prgPruebas"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:max="100"
        android:progress="0"
        android:visibility="visible" />

	<TextView
	    android:id="@+id/txtProgreso"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/str_labelProgreso"
	    android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtLogPruebas"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_infoprogreso" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>